2014-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp: Changed to use Rcpp Attributes
	* R/option.R: Changed calls accordingly
	* R/arrays.R: Idem
	* man/AmericanOption.Rd: Updated as param. list no longer returned
	* man/EuropeanOption.Rd: Idem

2014-03-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/implieds.cpp: Changed to use Rcpp Attributes
	* R/implieds.R: Changed calls accordingly
	* man/AmericanOptionImpliedVolatility.Rd: Updated
	* man/EuropeanOptionImpliedVolatility.Rd: Updated

2014-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/bermudan.cpp: Changed to use Rcpp Attributes
	* R/bermudan.R: Changed call accordingly

	* src/bermudan.cpp: Updated copyright header with gnu.org URL
	* R/bermudan.R: Idem

2014-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/hullwhite.cpp: Changed to use Rcpp Attributes
	* R/hullWhiteCalibration.R: Changed call accordingly

	* src/hullwhite.cpp:  Updated copyright header with gnu.org URL
	* R/hullWhiteCalibration.R: Idem

	* .travis.yml: Revert to main repo now that pull request is in

2014-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/discount.cpp: Changed to use Rcpp Attributes
	* R/discount.R: Changed call in default methods accordingly

	* src/discount.cpp: Updated copyright header with gnu.org URL
	* R/discount.R: Idem

2014-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/barrier_binary.cpp: Changed to use Rcpp Attributes
	* R/implied.R: Changed call in default methods accordingly
	* R/option.R: Idem
	* man/BarrierOption.Rd: Updated as param. list no longer returned
	* man/BinaryOption.Rd: Idem
	* man/BinaryOptionImpliedVolatility.Rd: Idem

	* src/barrier_binary.cpp: Updated copyright header with gnu.org URL
	* R/implied.R: Idem
	* R/option.R: Idem

2014-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/asian.cpp: Changed to use Rcpp Attributes
	* R/asian.R: Changed call in default method accordingly
	* man/asian.Rd: Updated as parameter list no longer returned
